[UIFC-468] Refactor Verticles to plain service classes (#177)
* [UIFC-468] Rename Verticle files to Services

* [UIFC-468] Refactor Verticles to plain service classes

Replace Verticle-based implementations with plain service classes:
- EZBHarvestVerticle -> EZBHarvestService
- AbstractSelectMetadataSourceVerticle -> AbstractSelectMetadataSourceService
- SelectMetadataSourceVerticle -> SelectMetadataSourceService
- UnselectMetadataSourceVerticle -> UnselectMetadataSourceService
- SelectMetadataSourceVerticleFactory -> SelectMetadataSourceServiceFactory

* [UIFC-468] Fix misleading error message and unnecessary RuntimeException wrapping

- Use generic error message in EZBHarvestJob.onFailure since it covers
the entire future chain, not just credential retrieval
- Use Future.failedFuture(String) instead of wrapping in RuntimeException

* [UIFC-468] Apply review suggestions

- Apply minor suggestions
- Add step-level onFailure logging to async Future chains

* [UIFC-468] Inline context.owner