@@ -1,10 +1,14 @@
 package org.folio.finc.periodic;
 
-import io.vertx.core.AbstractVerticle;
+import io.vertx.core.Context;
 import io.vertx.core.Future;
-import io.vertx.core.Promise;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Base64;
+import java.util.Collections;
+import java.util.Date;
+import java.util.List;
+import java.util.UUID;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.folio.finc.dao.SelectFileDAO;
@@ -13,78 +17,70 @@ import org.folio.finc.dao.SelectFilterDAO;
 import org.folio.finc.dao.SelectFilterDAOImpl;
 import org.folio.finc.model.File;
 import org.folio.finc.periodic.ezb.EZBService;
+import org.folio.rest.jaxrs.model.Credential;
 import org.folio.rest.jaxrs.model.FilterFile;
 import org.folio.rest.jaxrs.model.FincSelectFilter;
-import org.folio.rest.jaxrs.model.FincSelectFilters;
 import org.folio.rest.jaxrs.model.Metadata;
 
-/** A {@link io.vertx.core.Verticle} to fetch EZB holding files for a single tenant. */
-public class EZBHarvestVerticle extends AbstractVerticle {
+/** Service to fetch EZB holding files for a single tenant. */
+public class EZBHarvestService {
 
   public static final String LABEL_EZB_FILE = "EZB file";
   public static final String LABEL_EZB_HOLDINGS = "EZB holdings";
-  private static final Logger log = LogManager.getLogger(EZBHarvestVerticle.class);
+  private static final Logger log = LogManager.getLogger(EZBHarvestService.class);
   private final SelectFilterDAO selectFilterDAO = new SelectFilterDAOImpl();
   private final SelectFileDAO selectFileDAO = new SelectFileDAOImpl();
   private final EZBService ezbService;
 
-  public EZBHarvestVerticle(EZBService ezbService) {
-    super();
+  public EZBHarvestService(EZBService ezbService) {
     this.ezbService = ezbService;
   }
 
-  @Override
-  public void start(Promise<Void> startFuture) {
-    String user = config().getString("user");
-    String password = config().getString("password");
-    String libId = config().getString("libId");
-    String isil = config().getString("isil");
+  /**
+   * Harvests EZB holding files for a single tenant.
+   *
+   * @param credential EZB credential for the tenant
+   * @param context Vert.x context
+   * @return Future that completes when harvest is done
+   */
+  public Future<Void> harvest(Credential credential, Context context) {
+    String isil = credential.getIsil();
+    log.info("Starting ezb harvest for isil {}", isil);
 
-    log.info("Will start ezb harvester verticle for isil {}", isil);
+    Future<String> ezbFileFuture =
+        ezbService.fetchEZBFile(
+            credential.getUser(), credential.getPassword(), credential.getLibId(), context.owner());
+    Future<FincSelectFilter> dbFilterFuture = fetchFilterFromDB(isil, context);
 
-    Future<String> ezbFileFuture = ezbService.fetchEZBFile(user, password, libId, vertx);
-    Future<FincSelectFilter> dbFilterFuture = fetchFilterFromDB(isil);
-    Future.all(Arrays.asList(ezbFileFuture, dbFilterFuture))
+    return Future.all(Arrays.asList(ezbFileFuture, dbFilterFuture))
         .compose(
             compositeFuture ->
-                updateEZBFileOfFilter(dbFilterFuture.result(), ezbFileFuture.result(), isil))
-        .onComplete(
-            ar -> {
-              if (ar.succeeded()) {
-                log.info("Successfully executed ezb updater for {}", isil);
-                startFuture.complete();
-              } else {
-                log.error("Error while updating ezb file for isil {}: {}", isil, ar.cause());
-                startFuture.fail(ar.cause());
-              }
-            });
+                updateEZBFileOfFilter(
+                    dbFilterFuture.result(), ezbFileFuture.result(), isil, context))
+        .onSuccess(v -> log.info("Successfully executed ezb updater for {}", isil))
+        .onFailure(err -> log.error("Error while updating ezb file for isil {}", isil, err));
   }
 
   /**
    * Fetches ezb holding filter from database
    *
    * @param isil Isil of current tenant
+   * @param context Vert.x context
    * @return
    */
-  private Future<FincSelectFilter> fetchFilterFromDB(String isil) {
-    Promise<FincSelectFilter> result = Promise.promise();
-    selectFilterDAO
-        .getAll("label==\"" + LABEL_EZB_HOLDINGS + "\"", 0, 1, isil, vertx.getOrCreateContext())
-        .onComplete(
-            ar -> {
-              if (ar.succeeded()) {
-                FincSelectFilters fincSelectFilters = ar.result();
-                List<FincSelectFilter> filters = fincSelectFilters.getFincSelectFilters();
-                if (filters.isEmpty()) {
-                  result.complete();
-                } else {
-                  result.complete(filters.get(0));
-                }
+  private Future<FincSelectFilter> fetchFilterFromDB(String isil, Context context) {
+    return selectFilterDAO
+        .getAll("label==\"" + LABEL_EZB_HOLDINGS + "\"", 0, 1, isil, context)
+        .onFailure(err -> log.error("Cannot fetch filter from DB for isil {}", isil, err))
+        .map(
+            fincSelectFilters -> {
+              List<FincSelectFilter> filters = fincSelectFilters.getFincSelectFilters();
+              if (filters.isEmpty()) {
+                return null;
               } else {
-                result.fail(String.format("Failed to fetch filter from DB: %s", ar.cause()));
+                return filters.get(0);
               }
             });
-    return result.future();
   }
 
   /**
@@ -94,10 +90,11 @@ public class EZBHarvestVerticle extends AbstractVerticle {
    * @param filter The filter
    * @param ezbFileString The ezb holding file
    * @param isil Isil of current tenant
+   * @param context Vert.x context
    * @return
    */
   private Future<Void> updateEZBFileOfFilter(
-      FincSelectFilter filter, String ezbFileString, String isil) {
+      FincSelectFilter filter, String ezbFileString, String isil, Context context) {
     if (filter == null) {
       // we have no filter, so we do not need to update its file
       log.info("No ezb filter found for isil {}. Will do nothing.", isil);
@@ -105,17 +102,17 @@ public class EZBHarvestVerticle extends AbstractVerticle {
     }
 
     if (filter.getFilterFiles().isEmpty() || !hasEZBFile(filter)) {
-      return insertFileAndUpdateFilter(ezbFileString, filter, isil);
+      return insertFileAndUpdateFilter(ezbFileString, filter, isil, context);
     } else {
       // compare old and new filter
-      return calcFilesToRemove(ezbFileString, filter, isil)
-          .compose(filesToDelete -> removeFiles(filter, filesToDelete, isil))
+      return calcFilesToRemove(ezbFileString, filter, isil, context)
+          .compose(filesToDelete -> removeFiles(filter, filesToDelete, isil, context))
           .compose(
               updatedFilterFiles -> {
                 if (shouldUpdateFilter(filter, updatedFilterFiles)) {
                   // Update file and filter only if changed
                   filter.setFilterFiles(updatedFilterFiles);
-                  return insertFileAndUpdateFilter(ezbFileString, filter, isil);
+                  return insertFileAndUpdateFilter(ezbFileString, filter, isil, context);
                 } else {
                   return Future.succeededFuture();
                 }
@@ -129,27 +126,18 @@ public class EZBHarvestVerticle extends AbstractVerticle {
    * @param ezbFile Given ezb file
    * @param filter The filter
    * @param isil Isil of current tenant
+   * @param context Vert.x context
    * @return
    */
   private Future<Void> insertFileAndUpdateFilter(
-      String ezbFile, FincSelectFilter filter, String isil) {
-    Promise<Void> result = Promise.promise();
-    insertEZBFile(ezbFile, isil)
+      String ezbFile, FincSelectFilter filter, String isil, Context context) {
+    return insertEZBFile(ezbFile, isil, context)
         .compose(
             file -> {
               FilterFile ff = new FilterFile().withFileId(file.getId()).withLabel(LABEL_EZB_FILE);
               filter.getFilterFiles().add(ff);
-              return updateFilter(filter)
-                  .onComplete(
-                      ar -> {
-                        if (ar.succeeded()) {
-                          result.complete();
-                        } else {
-                          result.fail(ar.cause());
-                        }
-                      });
+              return updateFilter(filter, context).mapEmpty();
             });
-    return result.future();
   }
 
   /**
@@ -157,22 +145,26 @@ public class EZBHarvestVerticle extends AbstractVerticle {
    *
    * @param ezbFile The ezb file
    * @param isil Isil of current tenant
+   * @param context Vert.x context
    * @return
    */
-  private Future<File> insertEZBFile(String ezbFile, String isil) {
+  private Future<File> insertEZBFile(String ezbFile, String isil, Context context) {
     String base64Data = Base64.getEncoder().encodeToString(ezbFile.getBytes());
     String uuid = UUID.randomUUID().toString();
     File file = new File().withData(base64Data).withId(uuid).withIsil(isil);
-    return selectFileDAO.upsert(file, uuid, vertx.getOrCreateContext());
+    return selectFileDAO
+        .upsert(file, uuid, context)
+        .onFailure(err -> log.error("Cannot insert EZB file for isil {}", isil, err));
   }
 
   /**
    * Updates the given {@link FincSelectFilter} in the database
    *
    * @param filter The filter
+   * @param context Vert.x context
    * @return
    */
-  private Future<FincSelectFilter> updateFilter(FincSelectFilter filter) {
+  private Future<FincSelectFilter> updateFilter(FincSelectFilter filter, Context context) {
     Date date = new Date();
     if (filter.getMetadata() == null) {
       Metadata md = new Metadata().withCreatedDate(date).withUpdatedDate(date);
@@ -180,7 +172,9 @@ public class EZBHarvestVerticle extends AbstractVerticle {
     } else {
       filter.getMetadata().setUpdatedDate(date);
     }
-    return selectFilterDAO.update(filter, filter.getId(), vertx.getOrCreateContext());
+    return selectFilterDAO
+        .update(filter, filter.getId(), context)
+        .onFailure(err -> log.error("Cannot update filter {}", filter.getId(), err));
   }
 
   /**
@@ -191,34 +185,25 @@ public class EZBHarvestVerticle extends AbstractVerticle {
    * @param ezbFile Content of actual ezb file
    * @param filter The filter
    * @param isil Isil of current tenant
+   * @param context Vert.x context
    * @return
    */
   private Future<List<String>> calcFilesToRemove(
-      String ezbFile, FincSelectFilter filter, String isil) {
-    Promise<List<String>> result = Promise.promise();
+      String ezbFile, FincSelectFilter filter, String isil, Context context) {
     List<FilterFile> filterFiles = filter.getFilterFiles();
     List<String> ezbFileIds =
         filterFiles.stream()
             .filter(filterFile -> LABEL_EZB_FILE.equals(filterFile.getLabel()))
             .map(FilterFile::getFileId)
-            .collect(Collectors.toList());
+            .toList();
     if (ezbFileIds.size() > 1) {
       // if there is more than one file named "EZB file" we need to delete all of them
-      result.complete(ezbFileIds);
+      return Future.succeededFuture(ezbFileIds);
     } else {
       String ezbFileIdInDB = ezbFileIds.get(0);
-      fetchFileFromDB(ezbFileIdInDB, isil)
-          .onComplete(
-              ar -> {
-                if (ar.succeeded()) {
-                  File fileFromDB = ar.result();
-                  result.complete(calcFileIdsToDelete(ezbFile, ezbFileIdInDB, fileFromDB));
-                } else {
-                  result.fail(ar.cause());
-                }
-              });
+      return fetchFileFromDB(ezbFileIdInDB, isil, context)
+          .map(fileFromDB -> calcFileIdsToDelete(ezbFile, ezbFileIdInDB, fileFromDB));
     }
-    return result.future();
   }
 
   private List<String> calcFileIdsToDelete(
@@ -246,32 +231,30 @@ public class EZBHarvestVerticle extends AbstractVerticle {
    * @param filter The filter
    * @param fileIds Ids of files that will be removed
    * @param isil Isil of current tenant
+   * @param context Vert.x context
    * @return
    */
   private Future<List<FilterFile>> removeFiles(
-      FincSelectFilter filter, List<String> fileIds, String isil) {
-    Promise<List<FilterFile>> result = Promise.promise();
+      FincSelectFilter filter, List<String> fileIds, String isil, Context context) {
 
     List<Future<Integer>> deleteFileFutures =
         fileIds.stream()
-            .map(id -> selectFileDAO.deleteById(id, isil, vertx.getOrCreateContext()))
-            .collect(Collectors.toList());
+            .map(
+                id ->
+                    selectFileDAO
+                        .deleteById(id, isil, context)
+                        .onFailure(
+                            err -> log.error("Cannot delete file {} for isil {}", id, isil, err)))
+            .toList();
 
-    Future.all(deleteFileFutures)
-        .onComplete(
-            ar -> {
-              if (ar.succeeded()) {
-                // delete filter files with matching ids from filter
-                List<FilterFile> filteredFileIds =
+    return Future.all(deleteFileFutures)
+        .map(
+            // delete filter files with matching ids from filter, return mutable list
+            cf ->
+                new ArrayList<>(
                     filter.getFilterFiles().stream()
                         .filter(filterFile -> !fileIds.contains(filterFile.getFileId()))
-                        .collect(Collectors.toList());
-                result.complete(filteredFileIds);
-              } else {
-                result.fail(ar.cause());
-              }
-            });
-    return result.future();
+                        .toList()));
   }
 
   /**
@@ -302,20 +285,12 @@ public class EZBHarvestVerticle extends AbstractVerticle {
    *
    * @param id Id of the file
    * @param isil Isil of current tenant
+   * @param context Vert.x context
    * @return
    */
-  private Future<File> fetchFileFromDB(String id, String isil) {
-    Promise<File> result = Promise.promise();
-    selectFileDAO
-        .getById(id, isil, vertx.getOrCreateContext())
-        .onComplete(
-            ar -> {
-              if (ar.succeeded()) {
-                result.complete(ar.result());
-              } else {
-                result.fail(String.format("Failed to fetch file from DB: %s", ar.cause()));
-              }
-            });
-    return result.future();
+  private Future<File> fetchFileFromDB(String id, String isil, Context context) {
+    return selectFileDAO
+        .getById(id, isil, context)
+        .onFailure(err -> log.error("Cannot fetch file {} from DB for isil {}", id, isil, err));
   }
 }
